Finish Mas Parameters; add TOCs

--- a/New/InitializeVistA.html
+++ b/New/InitializeVistA.html
@@ -74,6 +74,46 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   </style>
 </head>
 <body>
+<nav id="TOC">
+<ul>
+<li><a href="#vista-initialization">VistA Initialization</a><ul>
+<li><a href="#gt.myottadb-note">GT.M/YottaDB Note</a></li>
+<li><a href="#getting-into-the-direct-mode-aka-programmer-mode">Getting into the Direct Mode (AKA Programmer Mode)</a></li>
+<li><a href="#note-to-gt.myottadb-users">Note to GT.M/YottaDB Users</a></li>
+<li><a href="#note-to-cache-users">Note to Cache Users</a></li>
+<li><a href="#commands-and-what-they-mean-a-short-m-primer">Commands and what they mean (a short M primer)</a></li>
+<li><a href="#vista-text-mode-conventions">VistA Text Mode Conventions</a></li>
+</ul></li>
+<li><a href="#begin-to-set-up-the-vista-system">Begin to Set Up the VistA System</a><ul>
+<li><a href="#before-you-start">Before you Start</a></li>
+<li><a href="#ztmgrset">ZTMGRSET</a><ul>
+<li><a href="#on-caché">On Caché</a></li>
+</ul></li>
+<li><a href="#fileman">Fileman</a></li>
+<li><a href="#zuset">ZUSET</a></li>
+<li><a href="#device-configuration">Device Configuration</a><ul>
+<li><a href="#null-device">NULL Device</a></li>
+<li><a href="#console-device">CONSOLE Device</a></li>
+<li><a href="#virtual-device">VIRTUAL Device</a></li>
+<li><a href="#hfs-device">HFS Device</a></li>
+</ul></li>
+<li><a href="#instance-domain-parent-domain-and-q-patch-domain">Instance Domain, Parent Domain, and Q-PATCH domain</a></li>
+<li><a href="#christening">Christening</a></li>
+<li><a href="#set-up-taskman">Set-up Taskman</a></li>
+<li><a href="#kernel-set-up">Kernel Set-Up</a></li>
+<li><a href="#back-to-taskman">Back to Taskman</a></li>
+<li><a href="#setup-your-institution">Setup your Institution</a></li>
+<li><a href="#setup-rpc-broker">Setup RPC Broker</a></li>
+<li><a href="#set-yourself-up-as-the-system-manager">Set Yourself Up as the System Manager</a></li>
+<li><a href="#mail-a-message">Mail a Message</a></li>
+<li><a href="#add-cprs-user">Add CPRS User</a></li>
+<li><a href="#downloading-cprs-and-running-it">Downloading CPRS and Running It</a></li>
+<li><a href="#registering-your-first-patient">Registering your First Patient</a></li>
+<li><a href="#next-steps">Next Steps</a></li>
+<li><a href="#stopping-vista">Stopping VistA</a></li>
+</ul></li>
+</ul>
+</nav>
 <h1 id="vista-initialization">VistA Initialization</h1>
 <p>Authors: Sam Habiel</p>
 <p>License:</p>
@@ -1898,7 +1938,8 @@ Select Registration Menu <TEST ACCOUNT> Option: <strong>Register a Patient</stro
 <ul>
 <li><a href="./SetupClinics.html">Set-up Clinics</a></li>
 <li><a href="./SetMasParameters.html">Set-up MAS Parameters</a> (Part 1 of setting up a hospital)</li>
-<li>Set-up Wards and Beds (Part 2 of setting up a hospital)</li>
+<li><a href="./WardSetup.html">Set-up Wards and Beds</a> (Part 2 of setting up a hospital)</li>
+<li>Admit Patients to Hospital</li>
 <li>Install a Drug File, or create one from Scratch</li>
 <li>Set-up Outpatient Pharmacy</li>
 <li>Set-up Inpatient Pharmacy</li>
