--- a/New/InstallCache.html
+++ b/New/InstallCache.html
@@ -12,6 +12,14 @@
 <header>
 <h1 class="title">Installing Caché</h1>
 </header>
+<nav id="TOC">
+<ul>
+<li><a href="#download-and-install-caché-on-microsoft-windows">Download and Install Caché on Microsoft Windows</a></li>
+<li><a href="#download-and-install-caché-on-mac-os-x-or-linux">Download and Install Caché on Mac OS X or Linux</a></li>
+<li><a href="#configuring-caché">Configuring Caché</a></li>
+<li><a href="#install-cache.dat">Install CACHE.DAT</a></li>
+</ul>
+</nav>
 <p>Authors: Joseph Snyder, Sam Habiel</p>
 <p>License:</p>
 <p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
