--- a/New/InstallEWD3.html
+++ b/New/InstallEWD3.html
@@ -12,6 +12,13 @@
 <header>
 <h1 class="title">Install EWD3</h1>
 </header>
+<nav id="TOC">
+<ul>
+<li><a href="#install-node.js">Install Node.js</a></li>
+<li><a href="#install-ewd3-ewd-vista-on-linux-with-gt.m">Install EWD3 &amp; EWD VistA On Linux With GT.M</a></li>
+<li><a href="#test-your-ewd3-apps">Test Your EWD3 Apps</a></li>
+</ul>
+</nav>
 <h1 id="install-node.js">Install Node.js</h1>
 <p><a href="https://nodejs.org/en/download/">Download Node.js installer</a></p>
 <h1 id="install-ewd3-ewd-vista-on-linux-with-gt.m">Install EWD3 &amp; EWD VistA On Linux With GT.M</h1>
