--- a/New/InstallVistAOnGTM.html
+++ b/New/InstallVistAOnGTM.html
@@ -12,6 +12,11 @@
 <header>
 <h1 class="title">Install VistA on GT.M or YottaDB</h1>
 </header>
+<nav id="TOC">
+<ul>
+<li><a href="#creating-an-empty-gt.myottadb-database-suitable-for-vista">Creating an Empty GT.M/YottaDB Database suitable for VistA</a></li>
+</ul>
+</nav>
 <p>Authors: Sam Habiel</p>
 <p>License:</p>
 <p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
