--- a/New/InstallGTM.html
+++ b/New/InstallGTM.html
@@ -12,6 +12,15 @@
 <header>
 <h1 class="title">Install GT.M or YottaDB</h1>
 </header>
+<nav id="TOC">
+<ul>
+<li><a href="#quick-introduction">Quick Introduction</a></li>
+<li><a href="#using-the-installation-script-yottadb">Using the Installation Script (YottaDB)</a></li>
+<li><a href="#using-the-package-manager-gt.m">Using the Package Manager (GT.M)</a></li>
+<li><a href="#using-the-installation-script-gt.m">Using the Installation Script (GT.M)</a></li>
+<li><a href="#traditional-technique-gt.m">Traditional Technique (GT.M)</a></li>
+</ul>
+</nav>
 <p>Authors: KS Bhaskar, Sam Habiel</p>
 <p>License: GNU Free Documentation License, Version 1.3 or any later (<a href="http://www.gnu.org/licenses/fdl.txt" class="uri">http://www.gnu.org/licenses/fdl.txt</a>).</p>
 <p>These instructions are a slightly modified version from the <a href="https://sourceforge.net/projects/fis-gtm/files/GT.M%20Acculturation%20Workshop/">GT.M Acculturation Workshop</a>.</p>
