--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -77,7 +77,9 @@ content="text/html; charset=iso-8859-1">
                 <li><strong><a href="New/InstallGTM.html">2. Install GT.M or YottaDB</a></strong></li>
                 <li><strong><a href="New/InstallVistAOnGTM.html">3. Install VistA on GT.M or YottaDB</a></strong></li>
                 <li><strong><a href="New/InitializeVistA.html">4. Configure VistA</a></strong></li>
-								<li><strong><a href="New/SetupClinics.html">5. Set-up Clinics</a></strong></li>
+                <li><strong><a href="New/SetupClinics.html">5. Set-up Clinics</a></strong></li>
+                <li><strong><a href="New/SetMasParameters.html">6. Set-up MAS Parameters</a></strong></li>
+                <li><strong><a href="New/WardSetup.html">7. Set-up Ward Parameters</a></strong></li>
             </ul>
             <p>If you find any mistakes, you can fix them by forking <a href="https://github.com/shabiel/hardhats-vista-install-doc">https://github.com/shabiel/hardhats-vista-install-doc</a>,
             making the correction, and then sending in a pull request.</p>
