--- a/New/SetMasParameters.html
+++ b/New/SetMasParameters.html
@@ -23,7 +23,7 @@
 <li><a href="#set-up-treating-specialities">Set-up Treating Specialities</a></li>
 </ul>
 </nav>
-<p>Authors: Sam Habiel</p>
+<p>Authors: Sam Habiel. Thank you for the transcripts provided by Joanne Brougham for setting up ADT.</p>
 <p>License: <a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="license" /></a></p>
 <p>Last updated in May 2018.</p>
 <p>If you have reached this point, it means that you have finished <a href="./InitializeVistA.html">VistA Initialization</a>.</p>
