change ul -> ol

--- a/New/WardSetup.html
+++ b/New/WardSetup.html
@@ -443,7 +443,7 @@ Do you want your output QUEUED? No// <strong>&lt;enter&gt;</strong>  (No)</code>
 <h1 id="extra-credit-set-up-bulletins">Extra Credit: Set-up Bulletins</h1>
 <p>Not covered here, but there is an optional step for you to work on: If you want VistA emails when an event happens, you can set-up mail groups, add yourself to the mail groups, and then attach the mail groups to the bulletins.</p>
 <p>Here's a list of bulletins that you can receive:</p>
-<pre><code>Select ADT System Definition Menu &lt;TEST ACCOUNT&gt; Option: &lt;b&gt;Bulletin Selection&lt;/b&gt;
+<pre><code>Select ADT System Definition Menu &lt;TEST ACCOUNT&gt; Option: Bulletin Selection
 This option is used to specify the mailgroup you desire specific types of
 notification to be made to.  The mailgroup can be one created locally or a
 distributed &#39;DG&#39; mailgroup.  If a mailgroup is selected notification concerning
