--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -72,15 +72,15 @@ content="text/html; charset=iso-8859-1">
             <p>If you will use Cach&eacute;, follow step 1 and then step 4 and following. If you have GT.M/YottaDB follow steps 2 and following.</p>
             <p>New instructions written and edited by Sam Habiel. Other authors whose work was copied and edited
             are noted at the top of each document.</p>
-            <ul>
-                <li><strong><a href="New/InstallCache.html">1. Install Cach&eacute; and VistA on Cach&eacute;</a></strong></li>
-                <li><strong><a href="New/InstallGTM.html">2. Install GT.M or YottaDB</a></strong></li>
-                <li><strong><a href="New/InstallVistAOnGTM.html">3. Install VistA on GT.M or YottaDB</a></strong></li>
-                <li><strong><a href="New/InitializeVistA.html">4. Configure VistA</a></strong></li>
-                <li><strong><a href="New/SetupClinics.html">5. Set-up Clinics</a></strong></li>
-                <li><strong><a href="New/SetMasParameters.html">6. Set-up MAS Parameters</a></strong></li>
-                <li><strong><a href="New/WardSetup.html">7. Set-up Ward Parameters</a></strong></li>
-            </ul>
+            <ol>
+                <li><strong><a href="New/InstallCache.html">Install Cach&eacute; and VistA on Cach&eacute;</a></strong></li>
+                <li><strong><a href="New/InstallGTM.html">Install GT.M or YottaDB</a></strong></li>
+                <li><strong><a href="New/InstallVistAOnGTM.html">Install VistA on GT.M or YottaDB</a></strong></li>
+                <li><strong><a href="New/InitializeVistA.html">Configure VistA</a></strong></li>
+                <li><strong><a href="New/SetupClinics.html">Set-up Clinics</a></strong></li>
+                <li><strong><a href="New/SetMasParameters.html">Set-up MAS Parameters</a></strong></li>
+                <li><strong><a href="New/WardSetup.html">Set-up Ward Parameters</a></strong></li>
+            </ol>
             <p>If you find any mistakes, you can fix them by forking <a href="https://github.com/shabiel/hardhats-vista-install-doc">https://github.com/shabiel/hardhats-vista-install-doc</a>,
             making the correction, and then sending in a pull request.</p>
             <h3>Old Instructions (2004-2006)</h3>
