Start on admitting patients

--- a/New/InitializeVistA.html
+++ b/New/InitializeVistA.html
@@ -1939,7 +1939,7 @@ Select Registration Menu <TEST ACCOUNT> Option: <strong>Register a Patient</stro
 <li><a href="./SetupClinics.html">Set-up Clinics</a></li>
 <li><a href="./SetMasParameters.html">Set-up MAS Parameters</a> (Part 1 of setting up a hospital)</li>
 <li><a href="./WardSetup.html">Set-up Wards and Beds</a> (Part 2 of setting up a hospital)</li>
-<li>Admit Patients to Hospital</li>
+<li><a href="./AdmitPatients.html">Admit Patients to Hospital</a> (Part 3 of setting up a hospital)</li>
 <li>Install a Drug File, or create one from Scratch</li>
 <li>Set-up Outpatient Pharmacy</li>
 <li>Set-up Inpatient Pharmacy</li>
