--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -80,6 +80,7 @@ content="text/html; charset=iso-8859-1">
                 <li><strong><a href="New/SetupClinics.html">Set-up Clinics</a></strong></li>
                 <li><strong><a href="New/SetMasParameters.html">Set-up MAS Parameters</a></strong></li>
                 <li><strong><a href="New/WardSetup.html">Set-up Ward Parameters</a></strong></li>
+								<li><strong><a href="New/AdmitPatients.html">Admit Patients to Hospital</a></strong></li>
             </ol>
             <p>If you find any mistakes, you can fix them by forking <a href="https://github.com/shabiel/hardhats-vista-install-doc">https://github.com/shabiel/hardhats-vista-install-doc</a>,
             making the correction, and then sending in a pull request.</p>
