--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -111,7 +111,7 @@ content="text/html; charset=iso-8859-1">
 </table>
 </center></div>
 
-<p align="center">This page last updated on December 23 2016.</p>
+<p align="center">This page last updated in May 2018.</p>
 
 
 <p align="center"><font size="1" face="Arial">Search | </font><a
